--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Functions to split concatenated data, conveniently stack columns of
     data.frames, and conveniently reshape data.frames.
 Version: 1.0
-Date: 2013-08-11
+Date: 2013-08-12
 Author: Ananda Mahto
 Maintainer: Ananda Mahto <ananda@mahto.info>
 Description: Online data collection tools like Google Forms often export
@@ -19,6 +19,8 @@ LazyLoad: yes
 Depends:
     R (>= 2.10),
     data.table
+URL: http://github.com/mrdwab/splitstackshape
+BugReports: http://github.com/mrdwab/splitstackshape/issues
 Collate:
     'concat.split.R'
     'Reshape.R'
