--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(concat.split.compact)
 export(concat.split.expanded)
 export(concat.split.list)
 export(concat.split.multiple)
+export(getanID)
 export(merged.stack)
 export(Reshape)
 export(Stacked)
