--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: splitstackshape
 Type: Package
 Title: Functions to split concatenated data, conveniently stack columns of
     data.frames, and conveniently reshape data.frames.
-Version: 1.0.1
-Date: 2013-08-16
+Version: 1.0.2
+Date: 2013-08-17
 Author: Ananda Mahto
 Maintainer: Ananda Mahto <ananda@mahto.info>
 Description: Online data collection tools like Google Forms often export
@@ -27,3 +27,4 @@ Collate:
     'splitstackshape_helper_functions.R'
     'splitstackshape-package.R'
     'Stacked.R'
+    'getanID.R'
