aliases for concat.split.expanded and concat.split.list. sep = "var.stubs" argument for Stacked and merged.stack

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(Reshape)
 export(Stacked)
 export(cSplit)
+export(cSplit_e)
+export(cSplit_l)
 export(concat.split)
 export(concat.split.compact)
 export(concat.split.expanded)
