stratified function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ export(concat.split.list)
 export(concat.split.multiple)
 export(getanID)
 export(merged.stack)
+export(stratified)
 import(data.table)
