--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Reshape)
 export(Stacked)
 export(cSplit)
 export(cSplit_e)
+export(cSplit_f)
 export(cSplit_l)
 export(concat.split)
 export(concat.split.compact)
