--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(concat.split.compact)
 export(concat.split.expanded)
 export(concat.split.list)
 export(concat.split.multiple)
+export(expandRows)
 export(getanID)
 export(merged.stack)
 export(stratified)
