listCol* functions added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(concat.split.list)
 export(concat.split.multiple)
 export(expandRows)
 export(getanID)
+export(listCol_l)
+export(listCol_w)
 export(merged.stack)
 export(stratified)
 import(data.table)
