exported helper functions trim_vec, trim_list, char_mat, and num_mat added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cSplit)
 export(cSplit_e)
 export(cSplit_f)
 export(cSplit_l)
+export(char_mat)
 export(concat.split)
 export(concat.split.compact)
 export(concat.split.expanded)
@@ -16,9 +17,15 @@ export(getanID)
 export(listCol_l)
 export(listCol_w)
 export(merged.stack)
+export(num_mat)
 export(stratified)
+export(trim_list)
+export(trim_vec)
 import(data.table)
+importFrom(stats,na.omit)
 importFrom(stats,reshape)
 importFrom(stats,setNames)
+importFrom(stringi,stri_trim_both)
 importFrom(utils,count.fields)
 importFrom(utils,read.table)
+importFrom(utils,type.convert)
