--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,10 @@ License: GPL-3
 LazyData: TRUE
 LazyLoad: yes
 Depends:
-    R (>= 3.2.0),
-    data.table (>= 1.10.5)
+    R (>= 3.2.0)
+Imports:
+    data.table (>= 1.10.5),
+    stringi
 URL: http://github.com/mrdwab/splitstackshape
 BugReports: http://github.com/mrdwab/splitstackshape/issues
 RoxygenNote: 6.0.1
