--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Depends:
 Imports:
     data.table (>= 1.10.5)
 Suggests:
-    stringi
+    stringi,
+    testthat
 URL: http://github.com/mrdwab/splitstackshape
 BugReports: http://github.com/mrdwab/splitstackshape/issues
 RoxygenNote: 6.0.1
