--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,12 +13,14 @@ export(concat.split.expanded)
 export(concat.split.list)
 export(concat.split.multiple)
 export(expandRows)
+export(f_split)
 export(getanID)
 export(listCol_l)
 export(listCol_w)
 export(merged.stack)
 export(num_mat)
 export(stratified)
+export(t_split)
 export(trim_list)
 export(trim_vec)
 import(data.table)
