--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(stratified)
 export(t_split)
 export(trim_list)
 export(trim_vec)
+export(unlist_cols)
 import(data.table)
 importFrom(stats,na.omit)
 importFrom(stats,reshape)
