--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,5 +29,6 @@ importFrom(stats,na.omit)
 importFrom(stats,reshape)
 importFrom(stats,setNames)
 importFrom(utils,count.fields)
+importFrom(utils,packageVersion)
 importFrom(utils,read.table)
 importFrom(utils,type.convert)
