imports etc cleanup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(listCol_l)
 export(listCol_w)
 export(merged.stack)
 export(num_mat)
+export(reshape_long)
 export(stratified)
 export(t_split)
 export(trim_list)
@@ -30,4 +31,5 @@ importFrom(stats,setNames)
 importFrom(utils,count.fields)
 importFrom(utils,packageVersion)
 importFrom(utils,read.table)
+importFrom(utils,strcapture)
 importFrom(utils,type.convert)
