--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,25 @@
 Package: splitstackshape
 Type: Package
 Title: Stack and Reshape Datasets After Splitting Concatenated Values
-Version: 1.4.3
-Date: 2018-03-20
+Version: 1.4.4
+Date: 2018-03-29
 Author: Ananda Mahto
 Maintainer: Ananda Mahto <ananda@mahto.info>
 Description: Online data collection tools like Google Forms often export
     multiple-response questions with data concatenated in cells. The
-    concat.split (cSplit) family of functions splits such data into
-    separate cells. The package also includes functions to stack groups
-    of columns and to reshape wide data, even when the data are
-    "unbalanced"---something which reshape (from base R) does not handle,
-    and which melt and dcast from reshape2 do not easily handle.
+    concat.split (cSplit) family of functions splits such data into separate 
+    cells. The package also includes functions to stack groups of columns and 
+    to reshape wide data, even when the data are "unbalanced"---something 
+    which reshape (from base R) does not handle, and which melt and dcast from 
+    reshape2 do not easily handle.
 License: GPL-3
 LazyData: TRUE
 LazyLoad: yes
 Depends:
-    R (>= 2.10),
+    R (>= 2.10)
+Imports:
     data.table (>= 1.9.4)
 URL: http://github.com/mrdwab/splitstackshape
 BugReports: http://github.com/mrdwab/splitstackshape/issues
 RoxygenNote: 6.0.1
+Roxygen: list(markdown = TRUE)
