--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(listCol_w)
 export(merged.stack)
 export(stratified)
 import(data.table)
+importFrom(stats,na.omit)
 importFrom(stats,reshape)
 importFrom(stats,setNames)
 importFrom(utils,count.fields)
