--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,4 +23,5 @@ URL: http://github.com/mrdwab/splitstackshape
 BugReports: http://github.com/mrdwab/splitstackshape/issues
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
-Suggests: covr
+Suggests: covr,
+    testthat
