--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(getanID)
 export(listCol_l)
 export(listCol_w)
 export(merged.stack)
+export(move_me)
 export(num_mat)
 export(reshape_long)
 export(stratified)
