--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,9 @@
 
 export(Stacked)
 export(cSplit)
-export(cSplit_cartesian)
 export(cSplit_e)
 export(cSplit_l)
+export(cartesian_split)
 export(char_mat)
 export(concat.split)
 export(concat.split.compact)
