cartesian_unlist added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cSplit)
 export(cSplit_e)
 export(cSplit_l)
 export(cartesian_split)
+export(cartesian_unlist)
 export(char_mat)
 export(concat.split)
 export(concat.split.compact)
