ftable2dt added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(expandRows,data.frame)
 S3method(expandRows,data.table)
 export(Stacked)
+export(array2dt)
 export(cSplit)
 export(cSplit_e)
 export(cSplit_l)
@@ -16,6 +17,7 @@ export(concat.split.list)
 export(concat.split.multiple)
 export(expandRows)
 export(f_split)
+export(ftable2dt)
 export(getanID)
 export(listCol_l)
 export(listCol_w)
@@ -29,6 +31,7 @@ export(trim_list)
 export(trim_vec)
 export(unlist_cols)
 import(data.table)
+importFrom(stats,ftable)
 importFrom(stats,na.omit)
 importFrom(stats,reshape)
 importFrom(stats,setNames)
