--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(concat.split.compact)
 export(concat.split.expanded)
 export(concat.split.list)
 export(concat.split.multiple)
+export(dist2dt)
 export(expandRows)
 export(f_split)
 export(ftable2dt)
